--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,13 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.android.support:multidex:1.0.3'
-
+    implementation 'com.github.AppIntro:AppIntro:4.2.3'
 
 }
+allprojects {
+    repositories {
 
+        maven { url 'https://jitpack.io' }
+    }
+}
 apply plugin: 'com.google.gms.google-services'
