--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
                                 // Project number pulled from dashboard, local value is ignored.
                                 onesignal_google_project_number: "REMOTE"]
 
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 28
         multiDexEnabled true
         versionCode 10
@@ -68,6 +68,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.github.AppIntro:AppIntro:4.2.3'
+    implementation 'info.awesomedevelopment:tvgrid:1.1.0'
 
 }
 allprojects {
