--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     implementation 'com.github.AppIntro:AppIntro:4.2.3'
     implementation 'info.awesomedevelopment:tvgrid:1.1.0'
 
+    compile project(":library")
+
+
 }
 allprojects {
     repositories {
